tests/idris2/perror007/expected
1/1: Building PError (PError.idr)
Error: Expected 'case', 'if', 'do', application or operator expression.

PError.idr:2:24--2:25
   |
 2 | foo = "empty interp: \{}"
   |                        ^

